# langtons_ant

./: README.md  pyproject.toml
langtons_ant/: ant.py  area.py  cli.py
